# kinghts_tour

untitled2/: CMakeLists.txt  fraktale.cpp  fraktale.h  main.cpp  mainwindow.cpp  mainwindow.h  untitled2.pro
